2012-05-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Use grub-probe and not cmp to check that disk is empty.

	* util/grub-install.in: Use grub-probe for zero-check.
	* util/grub-probe.c (PRINT_ZERO_CHECK): New enum value.
	(probe): Handle PRINT_ZERO_CHECK.
	(argp_parser): Handle -t zero_check.

2012-05-11  Vladimir Serbinenko  <phcoder@gmail.com>

	Flush block cache on adding disk to device map.

	* grub-core/kern/emu/hostdisk.c (flush_initial_buffer): New function.
	(grub_hostdisk_os_dev_to_grub_drive): Call flush_initial_buffer on
	adding.
	(read_device_map): Likewise.
	(open_device): Flush on opening.

2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/cpio.c (grub_cpio_find_file): Handle prefix.
	(handle_symlink): Fix off-by-one error.
	Canonicalize the target.
	(grub_cpio_dir): Canonicalize the name.
	Fix memory leak.
	Set directory.
	(grub_cpio_open): Canonicalize the name.

2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/iso9660.c (grub_iso9660_iterate_dir): Fix symlink
	handling.

2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ufs.c (grub_ufs_find_file): Fix handling of double slash.
	* grub-core/fs/minix.c (grub_minix_find_file): Likewise.

2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-menulst2cfg.c (main): Check return value of fwrite.
	* util/grub-mklayout.c (write_file): Likewise. New argument fname.
	All users updated.

2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/20_linux_xen.in: Update initrd list based on 10_linux.in
	counterpart.

2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix UFS1 big file support.

	* grub-core/fs/ufs.c (INODE): Removed.
	(INODE_SIZE): Always use 64-bit byte-swap since size field is always
	64-bit.
	(INODE_MODE): Simplify.
	(grub_ufs_inode): Use uint64_t for size and not int64_t.
	(grub_ufs_lookup_symlink): Don't use INODE.

2012-05-09  Vladimir Serbinenko  <phcoder@gmail.com>
